examples/test/testpolicy6228.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6228
  namespace: namespace291
spec:
  podSelector:
    matchLabels:
      key25: value30
      key39: value13
      key10: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value8
          key10: value30
      podSelector:
        matchLabels:
          key2: value37
